css/style.css
html {
    font-size: 16px;
    font-family: 'Open Sans', sans-serif;
    background-color: grey;
}

body {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    background-size: cover;
    background-position: bottom center;
    overflow-x: hidden;
}

html,
body {
    margin: 0;
    height: 100%;
    overflow: hidden;
}

img,
picutre {
    max-width: 100%;
    display: block;
}

/* Utility classes */

.flex {
    display: flex;
    gap: 1rem;
}


.grid {
    display: grid;
    gap: 1rem;
}

.container {
    padding-inline: 2em;
    margin-inline: auto;
    max-width: 80rem;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

.uppercase {
    text-transform: uppercase;
}

.resize-animation-stopper * {
    animation: none !important;
    transition: none !important;
}


/* primary-header */

.logo {
    width: 3rem;
    height: 3rem;
    margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
}

.primary-header {
    align-items: center;
    justify-content: space-between;
}

.menu-toggle {
    display: none;
}

.primary-navigation {
    list-style: none;
    padding: 0;
    margin: 0;
    background: hsl(0, 0%, 100%, 0.5) backdrop-filter: blur(2rem);
}

@supports (backdrop-filter: blur(2rem)) {
    .primary-navigation {
        background: hsl(0, 0%, 100%, 0.5);
        backdrop-filter: blur(2rem);
    }
}

.primary-navigation a {
    text-decoration: none;
    color: black;
    font-size: 1.5rem;
    font-weight: 600;
    padding: 1rem;
}

.primary-navigation a>span {
    font-weight: 700;
    margin-inline-end: .5em;
}


/* home */
.home {
    background-image: url(../assets/mtn.webp);
    background-size: cover;
}

.grid-container {
    text-align: center;
    display: grid;
    place-items: center stretch;
    padding-top: 3rem;
    padding-inline: 2rem;
    padding-bottom: 3rem;
}

.grid-background {
    background: hsl(0, 0%, 100%, 0.5);
    backdrop-filter: blur(2rem);
}

.grid-container p {
    max-width: 60ch;
}

.grid-container img {
    width: 100%;
    max-width: 30rem;
    border-radius: 50%;
    margin: auto;
    display: block;
}

@media (max-width: 35em) {
    .primary-navigation {
        gap: 2em;

        position: fixed;
        z-index: 1000;
        inset: 0 0 0 30%;

        flex-direction: column;
        padding: 10rem 2em;

        transform: translateX(100%);
        transition: transform 0.3s ease-out;
    }

    .primary-navigation[data-visible="true"] {
        transform: translateX(0);
    }

    .menu-toggle {
        display: block;
        position: absolute;
        z-index: 9999;
        background-color: transparent;
        background-image: url("../assets/hamburger.svg");
        background-repeat: no-repeat;
        border: 0;
        width: 2rem;
        aspect-ratio: 1;
        top: 2rem;
        right: 2rem;
    }

    .menu-toggle[aria-expanded="true"] {
        background-image: url("../assets/xmark-solid.svg");
    }
}

@media (min-width: 35em) and (max-width: 55em) {
    .primary-navigation a>i {
        display: none;
    }
}

@media (min-width: 35em) {
    .primary-navigation {
        gap: 3rem;
        padding-block: 2rem;
        padding-inline: 3rem;
    }

    .home {
        background-position: center center;
    }

    .grid-container {
        text-align: left;
        column-gap: 2rem;
        display: grid;
        grid-auto-flow: row;
        align-items: normal;
        gap: 2rem;
    }

    .grid-container img {
        max-width: auto;
        max-height: auto;
        margin: 2rem;
        padding: 1rem;
        padding-top: 2rem;
        padding-right: 3rem;
    }
}

@media (min-width: 45em) {
    .home {
        background-position: center center;
        background-size: cover;
    }

    .grid-container {
        text-align: left;
        column-gap: 2rem;
        grid-template-columns: 2fr 1fr;
        /* padding-bottom: max(6rem, 20vh); */
        align-items: end;
    }

    .grid-background {
        margin: 2rem;
        padding: 2rem;
    }

    .grid-container img {
        max-width: 75%;
        max-height: auto;
        margin: 1rem;
        padding: 1rem;
    }

}

@media (min-width: 55em) {
    .home {
        background-position: center center;
        background-size: cover;
    }

    .grid-container {
        text-align: left;
        column-gap: 2rem;
        grid-template-columns: 2fr 1fr;
        padding-bottom: 5rem;
        align-items: end;
    }

    .grid-background {
        margin: 2rem;
        padding: 2rem;
    }

    .grid-container img {
        max-width: auto;
        max-height: auto;
        margin: 1rem;
        padding: 1rem;
    }

}

